--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-track-player",
   "version": "2.0.3",
   "description": "A fully fledged audio module created for music apps",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && tsc",
     "lint": "eslint \"src/**/*.ts\"",
